# rtos

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CPPLINT.cfg  README.md  docker-compose.yaml  misra.config.json  my_map.yaml  pyproject.toml
.github/workflows/: misra_check.yaml  pre-commit.yaml
.west/: config
blinky/: CMakeLists.txt  prj.conf  prj_release.conf
blinky/src/: main.cpp
blinky/tests/simple_test/always_succeed/: test.cpp  testcase.yaml
car_sim/: CMakeLists.txt  prj.conf  pyproject.toml
car_sim/.github/workflows/: misra_check.yaml  pre-commit.yaml
car_sim/src/: car_system.cpp  car_system.hpp  main.cpp  periodic_task_info.hpp
car_system/: prj.conf
car_system/src/: car_system.cpp  car_system.hpp
car_system_old/: CMakeLists.txt  Kconfig  README.md  SESSION_CONTEXT.md  data.csv  deferrable_server_analysis.md  prj.conf  tasks.md
car_system_old/boards/: qemu_x86.overlay
car_system_old/src/: car_system.cpp  car_system.hpp  deferrable_server.cpp  deferrable_server.hpp  periodic_task_info.hpp  sporadic_task_generator.cpp  sporadic_task_generator.hpp
doc/: phase_a.md  tasks.md
doc/dynamic/: data.csv
doc/simulator/: configuration_phase_a.json
manifest-repo/: west.yml
scripts/: csv_parser.py  data_car.csv  data_crash.csv  sysview_csv_graphs.py
semaphores/: CMakeLists.txt  prj.conf
semaphores/src/: main.c
sensor_bme280/: CMakeLists.txt  prj.conf
sensor_bme280/boards/: nrf5340dk_nrf5340_cpuapp.overlay  qemu_x86.conf
sensor_bme280/src/: main.cpp
