[project]
name = "rtos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.13.0",
    "canopen>=2.4.1",
    "cbor>=1.0.0",
    "clang-format>=15.0.0",
    "colorama>=0.4.6",
    "coverage>=7.13.4",
    "cpplint>=2.0.2",
    "gcovr>=6.0",
    "gitlint-core>=0.19.1",
    "gitpython>=3.1.41",
    "graphviz>=0.21",
    "intelhex>=2.3.0",
    "jsonschema>=4.26.0",
    "junit2html>=31.0.5",
    "junitparser>=4.0.1",
    "libclang>=18.1.1",
    "lizard>=1.21.2",
    "lpc-checksum>=3.0.0",
    "lxml>=5.3.0",
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "natsort>=8.4.0",
    "numpy>=1.26.4",
    "opencv-python>=4.9.0.80",
    "packaging>=26.0",
    "patool>=2.0.0",
    "pillow>=10.3.0",
    "plotly>=6.5.2",
    "ply>=3.10",
    "psutil>=5.6.6",
    "pyelftools>=0.29",
    "pygithub>=2.8.1",
    "pykwalify>=1.8.0",
    "pylink-square>=1.7.0",
    "pylint>=3",
    "pyocd>=0.35.0",
    "pyserial>=3.5",
    "pytest>=9.0.2",
    "python-can>=4.3.0",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "reuse>=6.2.0",
    "ruff==0.14.2",
    "semver>=3.0.4",
    "spdx-tools>=0.8.3",
    "sphinx-lint>=1.0.2",
    "spsdk>=3.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "unidiff>=0.7.5",
    "vermin>=1.8.0",
    "west>=0.14.0",
    "windows-curses>=2.4.1 ; sys_platform == 'win32'",
    "yamllint>=1.38.0",
]

[tool.uv.workspace]
members = [
    "car_sim",
]
